--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "declarations": true
   },
   "dependencies": {
+    "@pick-star/cli-mongodb": "^1.0.3",
     "egg": "^2.15.1",
-    "egg-scripts": "^2.11.0"
+    "egg-scripts": "^2.11.0",
+    "mongoose": "^5.11.13"
   },
   "devDependencies": {
     "autod": "^3.0.1",
